--- a/Lixo-Mestre/en.lproj/LixoPapao.storyboard
+++ b/Lixo-Mestre/en.lproj/LixoPapao.storyboard
@@ -714,28 +714,18 @@
                         <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
-                            <view contentMode="scaleToFill" id="0gd-Yk-zyG" userLabel="view -escolher lixo">
-                                <rect key="frame" x="20" y="60" width="280" height="400"/>
+                            <view contentMode="scaleToFill" id="0gd-Yk-zyG" userLabel="view-escolher lixo">
+                                <rect key="frame" x="28" y="60" width="263" height="337"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <subviews>
-                                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="fundo.png" id="cTJ-HD-UQg">
-                                        <rect key="frame" x="-1" y="0.0" width="280" height="400"/>
+                                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="fundo lixos.png" id="cTJ-HD-UQg">
+                                        <rect key="frame" x="-1" y="0.0" width="263" height="337"/>
                                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                     </imageView>
-                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" id="mah-TL-N8V" userLabel="Button - papel">
-                                        <rect key="frame" x="20" y="20" width="110" height="140"/>
-                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                        <state key="normal" title="Button" image="azul.png">
-                                            <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
-                                        </state>
-                                        <connections>
-                                            <action selector="botaoPapel:" destination="Pqu-0p-35V" eventType="touchUpInside" id="AuA-WM-kME"/>
-                                        </connections>
-                                    </button>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" id="fbm-LS-oB7" userLabel="Button - metal">
-                                        <rect key="frame" x="150" y="20" width="110" height="140"/>
+                                        <rect key="frame" x="160" y="189" width="90" height="140"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                        <state key="normal" title="Button" image="amarelo.png">
+                                        <state key="normal" title="Button" image="metal - selecione o lixo.png">
                                             <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                         </state>
                                         <connections>
@@ -743,9 +733,9 @@
                                         </connections>
                                     </button>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" id="PgO-gv-E4x" userLabel="Button - vidro">
-                                        <rect key="frame" x="20" y="189" width="110" height="140"/>
+                                        <rect key="frame" x="160" y="34" width="90" height="140"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                        <state key="normal" title="Button" image="verde.png">
+                                        <state key="normal" title="Button" image="vidro - selecione o lixo.png">
                                             <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                         </state>
                                         <connections>
@@ -753,9 +743,9 @@
                                         </connections>
                                     </button>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" id="XxE-iZ-32e" userLabel="Button - plastico">
-                                        <rect key="frame" x="150" y="189" width="110" height="140"/>
+                                        <rect key="frame" x="45" y="34" width="60" height="140"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                        <state key="normal" title="Button" image="vermehlo.png">
+                                        <state key="normal" title="Button" image="garrafa - selecione o lixo.png">
                                             <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                         </state>
                                         <connections>
@@ -772,6 +762,16 @@
                                             <action selector="botaoDissmissEscolha:" destination="Pqu-0p-35V" eventType="touchUpInside" id="o5m-WK-eyL"/>
                                         </connections>
                                     </button>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" id="mah-TL-N8V" userLabel="Button - papel">
+                                        <rect key="frame" x="25" y="189" width="100" height="140"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <state key="normal" title="Button" image="papel-selecione lixo.png">
+                                            <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                        </state>
+                                        <connections>
+                                            <action selector="botaoPapel:" destination="Pqu-0p-35V" eventType="touchUpInside" id="AuA-WM-kME"/>
+                                        </connections>
+                                    </button>
                                 </subviews>
                                 <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
                             </view>
@@ -779,10 +779,10 @@
                                 <rect key="frame" x="28" y="60" width="263" height="337"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             </imageView>
-                            <button hidden="YES" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="OTp-aH-Vw8" userLabel="Button - escolher lixo">
-                                <rect key="frame" x="40" y="403" width="240" height="60"/>
+                            <button hidden="YES" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="OTp-aH-Vw8" userLabel="escolher lixo">
+                                <rect key="frame" x="40" y="413" width="240" height="46"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <state key="normal" backgroundImage="conectividade-03.png">
+                                <state key="normal" backgroundImage="escolha o lixo.png">
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
                                 <connections>
@@ -790,7 +790,7 @@
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" id="Xuo-pP-hXr">
-                                <rect key="frame" x="40" y="403" width="240" height="46"/>
+                                <rect key="frame" x="40" y="413" width="240" height="46"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <state key="normal" title="Conectar" image="conectar.png">
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
@@ -1145,10 +1145,6 @@
                         <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="logoo.png" id="dxx-h9-7xA">
-                                <rect key="frame" x="105" y="20" width="110" height="78"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                            </imageView>
                             <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Isto é reciclável?" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="EzS-PI-tEu">
                                 <rect key="frame" x="60" y="106" width="200" height="45"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
@@ -1169,13 +1165,17 @@
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" id="OR8-YY-oOT" userLabel="Button - like">
                                 <rect key="frame" x="190" y="410" width="60" height="60"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <state key="normal" image="tinder-01.png">
+                                <state key="normal" image="ok.png">
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
                                 <connections>
                                     <action selector="botaoLike:" destination="gfa-2D-zZN" eventType="touchUpInside" id="h17-Uy-Ey5"/>
                                 </connections>
                             </button>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="logo.png" id="dxx-h9-7xA">
+                                <rect key="frame" x="121" y="20" width="77" height="90"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            </imageView>
                         </subviews>
                         <color key="backgroundColor" red="0.91764705879999997" green="0.90980392160000001" blue="0.90980392160000001" alpha="1" colorSpace="calibratedRGB"/>
                     </view>
@@ -1195,38 +1195,38 @@
         <image name="Mapa.png" width="30" height="30"/>
         <image name="Tinder.png" width="30" height="30"/>
         <image name="Usuario.png" width="1971" height="2024"/>
-        <image name="amarelo.png" width="1576" height="2019"/>
         <image name="amigos.png" width="94" height="94"/>
-        <image name="azul.png" width="1576" height="2019"/>
         <image name="b1bbbe.png" width="1978" height="1978"/>
         <image name="botaoeditar.png" width="1389" height="2027"/>
         <image name="btn_Cadastre-se.png" width="458" height="94"/>
         <image name="cadeado do jogo.png" width="165" height="165"/>
         <image name="canfig.png" width="46" height="46"/>
         <image name="conectar.png" width="2018" height="384"/>
-        <image name="conectividade-03.png" width="920" height="210"/>
         <image name="confirmar.png" width="1742" height="1740"/>
         <image name="convidar.png" width="1726" height="2013"/>
         <image name="editar.png" width="2025" height="2024"/>
+        <image name="escolha o lixo.png" width="408" height="79"/>
+        <image name="fundo lixos.png" width="552" height="712"/>
         <image name="fundo tab selecionado.png" width="65" height="50"/>
-        <image name="fundo.png" width="1568" height="2023"/>
+        <image name="garrafa - selecione o lixo.png" width="81" height="211"/>
         <image name="iconjoguinho.png" width="100" height="100"/>
         <image name="lixo papao desconectado.png" width="1576" height="2019"/>
         <image name="login.png" width="493" height="94"/>
-        <image name="logoo.png" width="1294" height="869"/>
+        <image name="logo.png" width="162" height="200"/>
         <image name="mapa-melhor$.png" width="51" height="51"/>
         <image name="mapa-melhorcoleta.png" width="51" height="51"/>
         <image name="mapa-melhorlixopapao.png" width="51" height="51"/>
+        <image name="metal - selecione o lixo.png" width="114" height="209"/>
         <image name="metal.png" width="2030" height="2030"/>
+        <image name="ok.png" width="94" height="94"/>
+        <image name="papel-selecione lixo.png" width="159" height="212"/>
         <image name="papel.png" width="2019" height="2019"/>
         <image name="plasticoo.png" width="2017" height="2017"/>
         <image name="senha.png" width="1970" height="2024"/>
         <image name="seta.png" width="99" height="90"/>
         <image name="settings-100.png" width="100" height="100"/>
-        <image name="tinder-01.png" width="329" height="329"/>
         <image name="tirinha.png" width="2021" height="388"/>
-        <image name="verde.png" width="1576" height="2019"/>
-        <image name="vermehlo.png" width="1576" height="2019"/>
+        <image name="vidro - selecione o lixo.png" width="151" height="212"/>
         <image name="vidro.png" width="2023" height="2023"/>
         <image name="x.png" width="111" height="110"/>
     </resources>
